--- a/game.html
+++ b/game.html
@@ -230,7 +230,7 @@
         
 
         setInterval(passing_time, 1750)
-        // setInterval(passing_day, 1000)
+        setInterval(passing_day, 1000)
 
 
 
