--- a/game.html
+++ b/game.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Night 1</title>
+    <link rel="stylesheet" href="styles_for_tablet/tablet.css">
 </head>
 <style>
 
@@ -130,6 +131,14 @@
 <body>
     <div class="room">
         <div class="container">
+        <div id="tablet">
+            <div id="screen">
+                <span id="counter1">0_1</span>
+                <span id="counter2">0_2</span>
+                <span id="counter3">0_3</span>
+                <span id="counter4">0_4</span>
+            </div>
+        </div>
         <div id="blured_screen">
             <span id="winner">Winner</span>
         </div>
@@ -239,5 +248,6 @@
 
 
     </script>
+    <script src="/scripts/tablet.js"></script>
 </body>
 </html>
