--- a/game.html
+++ b/game.html
@@ -104,6 +104,7 @@
         border: none;
         margin: 40px;
         z-index: 0;
+        transition: 0.25s;
     }
 
     #check:active {
@@ -120,7 +121,7 @@
         border: none;
         margin: 40px;
         z-index: 0;
-        
+        transition: 0.25s;
     }
 
     #door:active {
