--- a/game.html
+++ b/game.html
@@ -94,6 +94,7 @@
         color: white;
         opacity: 0;
         transition: 5s;
+        z-index: -10;
     }
 
     #check {
@@ -152,10 +153,10 @@
                 <span id="counter4">0_4</span>
 
                 <span id="minimap">
-                    <div id="cam1"></div>
-                    <div id="cam2"></div>
-                    <div id="cam3"></div>
-                    <div id="cam4"></div>
+                    <div id="cam1_tile"></div>
+                    <div id="cam2_tile"></div>
+                    <div id="cam3_tile"></div>
+                    <div id="cam4_tile"></div>
                 </span>
                 
             </div>
