--- a/game.html
+++ b/game.html
@@ -106,6 +106,7 @@
         margin: 40px;
         z-index: 0;
         transition: 0.25s;
+        cursor: pointer;
     }
 
     #check:active {
@@ -123,6 +124,7 @@
         margin: 40px;
         z-index: 0;
         transition: 0.25s;
+        cursor: pointer;
     }
 
     #door:active {
