--- a/game.html
+++ b/game.html
@@ -19,14 +19,13 @@
         display: none;
     }
 
-
-
     .room {
         position: relative;
         height: 100vh;
         width: 120%;
         background-image: url(/textures/room.png);
         background-size: 100% 100%;
+        z-index: 10;
     }
 
     .container {
@@ -146,7 +145,7 @@
                 <div id="cam_screen2"></div>
                 <div id="cam_screen3"></div>
                 <div id="cam_screen4"></div>
-
+                
                 <span id="instruction">press escape button to exit from monitoring</span>
 
                 <span id="counter1">0_1</span>
