--- a/game.html
+++ b/game.html
@@ -141,12 +141,18 @@
         <div id="tablet">
             <div id="screen">
 
-                <div id="cam_screen1"></div>
-                <div id="cam_screen2"></div>
-                <div id="cam_screen3"></div>
-                <div id="cam_screen4"></div>
-                
-                <span id="instruction">press escape button to exit from monitoring</span>
+                <div id="cam_screen1">
+                    <span id="instruction">press escape button to exit from monitoring</span>
+                </div>
+                <div id="cam_screen2">
+                    <span id="instruction">press escape button to exit from monitoring</span>
+                </div>
+                <div id="cam_screen3">
+                    <span id="instruction">press escape button to exit from monitoring</span>
+                </div>
+                <div id="cam_screen4">
+                    <span id="instruction">press escape button to exit from monitoring</span>
+                </div>
 
                 <span id="counter1">0_1</span>
                 <span id="counter2">0_2</span>
