--- a/game.html
+++ b/game.html
@@ -143,21 +143,32 @@
 
                 <div id="cam_screen1">
                     <span id="instruction">press escape button to exit from monitoring</span>
+                    <span id="counter1">C_1</span>
+                    <span id="counter2">C_2</span>
+                    <span id="counter3">C_3</span>
+                    <span id="counter4">C_4</span>
                 </div>
                 <div id="cam_screen2">
                     <span id="instruction">press escape button to exit from monitoring</span>
+                    <span id="counter1">C_1</span>
+                    <span id="counter2">C_2</span>
+                    <span id="counter3">C_3</span>
+                    <span id="counter4">C_4</span>
                 </div>
                 <div id="cam_screen3">
                     <span id="instruction">press escape button to exit from monitoring</span>
+                    <span id="counter1">C_1</span>
+                    <span id="counter2">C_2</span>
+                    <span id="counter3">C_3</span>
+                    <span id="counter4">C_4</span>
                 </div>
                 <div id="cam_screen4">
                     <span id="instruction">press escape button to exit from monitoring</span>
+                    <span id="counter1">C_1</span>
+                    <span id="counter2">C_2</span>
+                    <span id="counter3">C_3</span>
+                    <span id="counter4">C_4</span>
                 </div>
-
-                <span id="counter1">0_1</span>
-                <span id="counter2">0_2</span>
-                <span id="counter3">0_3</span>
-                <span id="counter4">0_4</span>
 
                 <span id="minimap">
                     <div id="cam1_tile"></div>
