--- a/game.html
+++ b/game.html
@@ -140,13 +140,13 @@
         <div class="container">
         <div id="tablet">
             <div id="screen">
-                
+
                 <div id="cam_screen1">
                     <span id="instruction">press escape button to exit from monitoring</span>
                     <span id="counter1">C_1</span>
-                    <span id="counter2">C_2</span>
+                <!--<span id="counter2">C_2</span>
                     <span id="counter3">C_3</span>
-                    <span id="counter4">C_4</span>
+                    <span id="counter4">C_4</span>--> 
                 </div>
                 <div id="cam_screen2">
                     <span id="instruction">press escape button to exit from monitoring</span>
