--- a/game.html
+++ b/game.html
@@ -19,12 +19,13 @@
         display: none;
     }
 
-    .room {
+    #room {
         position: relative;
         height: 100vh;
         width: 120%;
         background-image: url(/textures/room.png);
         background-size: 100% 100%;
+        transition: 0.5s;
         z-index: 10;
     }
 
@@ -136,7 +137,7 @@
 
 </style>
 <body>
-    <div class="room">
+    <div id="room">
         <div class="container">
         <div id="tablet">
             <div id="screen">
