--- a/game.html
+++ b/game.html
@@ -26,6 +26,7 @@
         width: 120%;
         background-image: url(/textures/room.png);
         background-size: 100% 100%;
+        transition: 0.5;
     }
 
     #container {
