--- a/game.html
+++ b/game.html
@@ -252,8 +252,8 @@
             window.scroll(value_scroll--, 0)
         }
 
-        scroll_btn_right.addEventListener("mousedown", scrollingright)
-        scroll_btn_left.addEventListener("mousedown", scrollingleft)
+        scroll_btn_right.addEventListener("mousemove", scrollingright)
+        scroll_btn_left.addEventListener("mousemove", scrollingleft)
 
         /* */
 
