--- a/game.html
+++ b/game.html
@@ -51,6 +51,7 @@
         background-color: #00000075;
         right: 0%;
         z-index: 1;
+        cursor: pointer;
     }
 
     #scroll-left {
@@ -61,6 +62,7 @@
         background-color: #00000075;
         left: 0%;
         z-index: 1;
+        cursor: pointer;
     }
 
     #btn_container {
@@ -90,6 +92,28 @@
         font-family: 'Syne Mono', monospace;
         font-size: 90px;
         color: white;
+    }
+
+    #counter1 {
+    align-self: flex-end;
+    font-size: 30px;
+    color: white;
+    margin: 80px;
+    opacity: 0;
+    }
+    #counter2 {
+    align-self: flex-end;
+    font-size: 30px;
+    color: white;
+    margin: 80px;
+    opacity: 0;
+    }
+        
+    #counter3 {
+    align-self: flex-start;
+    font-size: 30px;
+    margin: 80px;
+    opacity: 0;
     }
 
     #winner {
