--- a/menu.html
+++ b/menu.html
@@ -26,6 +26,8 @@
             height: 100vh;
             width: 100vw;
             background-image: url(/textures/menu.png);
+            background-size: cover;
+            background-repeat: no-repeat;
             z-index: -1;
         }
 
