--- a/game.html
+++ b/game.html
@@ -29,7 +29,7 @@
     #room {
         height: 100vh;
         width: 120%;
-        background-image: url(/textures/room.png);
+        background-image: url(./textures/room.png);
         background-size: 100% 100%;
         transition: 0.5;
     }
@@ -186,7 +186,7 @@
         bottom: -10000px;
         height: 100%;
         width: 100%;
-        background-image: url(/textures/jumpscare.png);
+        background-image: url(./textures/jumpscare.png);
         background-repeat: no-repeat;
         background-size: 90% 100%;
         transition: 0.5s;
